--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -42,12 +42,12 @@ body {
     color: #525CD1;
 }
 
-.failed_list {
+.failed_list, .blocked_list {
     font-size: 24px;
     text-align: left;
 }
 
-.failed_list li {
+.failed_list li, .blocked_list li {
     padding: 4px 4px 4px 4px;
 }
 
