--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,4 @@
 body {
-    padding-top: 20px;
     padding-bottom: 40px;
     text-align: center;
     line-height: 1;
@@ -7,6 +6,10 @@ body {
 
 #waiting {
     font-size: 150px;
+}
+
+.jumbotron {
+    margin-bottom: 50px;
 }
 
 .title {
