--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,40 +1,32 @@
 body {
-    padding-bottom: 40px;
     text-align: center;
     line-height: 1;
+    font-size: 14px;
 }
 
 #waiting {
-    font-size: 150px;
-}
-
-.jumbotron {
-    margin-bottom: 50px;
+    font-size: 2.5em;
 }
 
 .title {
-    font-size: 100px;
-}
-
-.counter {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    font-size: 7em;
+    line-height: 100%;
 }
 
 .ticker {
-    font-size: 70px;
+    font-size: 5.5em;
 }
 
 .heading {
-    font-size: 60px;
+    font-size: 4em;
 }
 
 .total_stats {
-    font-size: 30px;
+    font-size: 2.5em;
 }
 
 .passed, .failed, .blocked {
-    font-size: 70px;
+    font-size: 1.7em;
 }
 
 .passed {
@@ -50,16 +42,12 @@ body {
 }
 
 .failed_list, .blocked_list {
-    font-size: 24px;
+    font-size: 2em;
     text-align: left;
 }
 
 .failed_list li, .blocked_list li {
-    padding: 4px 4px 4px 4px;
-}
-
-.redwell, .bluewell {
-    margin-top: 5px;
+    line-height: 1.2em;
 }
 
 .redwell {
@@ -75,6 +63,5 @@ body {
 }
 
 .note {
-    font-size: 14px;
+    font-size: 0.7em;
 }
-
