--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,13 +4,18 @@ body {
     font-size: 14px;
 }
 
+h1 {
+    padding-bottom: 10px;
+}
+
 #waiting {
     font-size: 2.5em;
 }
 
 .title {
-    font-size: 7em;
+    font-size: 5em;
     line-height: 100%;
+
 }
 
 .ticker {
